--- a/.env-sample
+++ b/.env-sample
@@ -13,5 +13,12 @@ NUM_VALIDATORS=4
 ALLOWED_RPC_APIS='ETH,NET,IBFT,ADMIN,TXPOOL'
 SHARD=3
 
+# Optional comma separated enode addresses of peers in other AWS accounts
+CROSS_ACCOUNT_PEERS=""
+
+# Optional comma separated PrivateLink service names to automatically create
+# Interface VPC endpoints for cross-account P2P traffic
+CROSS_ACCOUNT_P2P_SERVICES=""
+
 # For more detailed configuration options
 # see /lib/constants and /lib/genesis/genesis.json
