Add Transit Gateway automation

--- a/.env-sample
+++ b/.env-sample
@@ -16,9 +16,11 @@ SHARD=3
 # Optional comma separated enode addresses of peers in other AWS accounts
 CROSS_ACCOUNT_PEERS=""
 
-# Optional comma separated PrivateLink service names to automatically create
-# Interface VPC endpoints for cross-account P2P traffic
-CROSS_ACCOUNT_P2P_SERVICES=""
+# Optional: Transit Gateway ID to attach VPCs for cross-account P2P traffic
+TGW_ID=""
+# Optional: comma separated AWS account IDs to share the Transit Gateway with
+INVITED_ACCOUNT_IDS=""
+
 
 # For more detailed configuration options
 # see /lib/constants and /lib/genesis/genesis.json
